[tool.poetry]
name = "booze"
version = "0.5.0"
description = ""
authors = ["Itemize <itemizebi@itemize.com.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
mypy = "^1.4.1"
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
