[tool.poetry]
name = "booze"
version = "0.5.0"
description = ""
authors = ["Itemize <itemizebi@itemize.com.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
mypy = "^1.4.1"
pytest = "^7.4.0"


[tool.poetry.group.doc.dependencies]
mkdocstrings-python = "^1.2.1"
mkdocs-material = "^9.1.19"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
